force-app/main/default/objects/Order__c/fields/GlobalStatusFormula__c.field-meta.xml
<CustomField>
    <fullName>GlobalStatusFormula__c</fullName>
    <formula>IF(nbOpenShipping__c &gt; 0, &quot;OPEN&quot;, IF(nbReceivedShipping__c &gt; 0, &quot;READY FOR PICKUP&quot;, IF(nbCompleteShipping__c &gt; 0, &quot;COMPLETE&quot;, &quot;CANCELLED&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Status Formula</label>
    <type>Text</type>
</CustomField>