force-app/main/default/objects/Order__c/fields/is_in_MyTeam__c.field-meta.xml
<CustomField>
    <fullName>is_in_MyTeam__c</fullName>
    <formula>$UserRole.Id = OwnerId__r.UserRoleId ||  CONTAINS(OwnerID_ParentRoleID__c, $UserRole.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is in MyTeam</label>
    <type>Checkbox</type>
</CustomField>