force-app/main/default/objects/Order__c/fields/maxCanceledDate__c.field-meta.xml
<CustomField>
    <fullName>maxCanceledDate__c</fullName>
    <label>max Canceled Date</label>
    <summarizedField>OrderShipping__c.StatusDate__c</summarizedField>
    <summaryFilterItems>
        <field>OrderShipping__c.IsXstoreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderShipping__c.Status__c</field>
        <operation>equals</operation>
        <value>Canceled, cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>