force-app/main/default/objects/Order__c/fields/maxDateOfShippings__c.field-meta.xml
<CustomField>
    <fullName>maxDateOfShippings__c</fullName>
    <description>date of the last shipping modified</description>
    <label>max Date Of Shippings</label>
    <summarizedField>OrderShipping__c.StatusDate__c</summarizedField>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>