force-app/main/default/objects/Order__c/fields/nbCancelledShipping__c.field-meta.xml
<CustomField>
    <fullName>nbCancelledShipping__c</fullName>
    <label>nb Cancelled Shipping</label>
    <summaryFilterItems>
        <field>OrderShipping__c.IsXstoreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderShipping__c.Status__c</field>
        <operation>equals</operation>
        <value>Canceled, cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>