force-app/main/default/objects/Order__c/fields/nbDeliveryType__c.field-meta.xml
<CustomField>
    <fullName>nbDeliveryType__c</fullName>
    <label>nb Delivery Type</label>
    <summaryFilterItems>
        <field>OrderShipping__c.IsXstoreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderShipping__c.DeliveryType__c</field>
        <operation>equals</operation>
        <value>DELIVERY</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>