force-app/main/default/objects/Order__c/fields/nbOpenShipping__c.field-meta.xml
<CustomField>
    <fullName>nbOpenShipping__c</fullName>
    <label>nb Open Shipping</label>
    <summaryFilterItems>
        <field>OrderShipping__c.IsXstoreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderShipping__c.Status__c</field>
        <operation>equals</operation>
        <value>New, Accepted / Rejected, Intransit, waiting_validation, polled, pending_allocation, accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>