force-app/main/default/objects/Order__c/fields/nbReceivedShipping__c.field-meta.xml
<CustomField>
    <fullName>nbReceivedShipping__c</fullName>
    <label>nb Received Shipping</label>
    <summaryFilterItems>
        <field>OrderShipping__c.IsXstoreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderShipping__c.Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>