force-app/main/default/objects/Order__c/fields/nbShippingsOngoing__c.field-meta.xml
<CustomField>
    <fullName>nbShippingsOngoing__c</fullName>
    <label>nb Shippings Ongoing</label>
    <summaryFilterItems>
        <field>OrderShipping__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Fulfilled, cancelled , unfulfilled</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>