force-app/main/default/objects/Order__c/fields/NumberShippings__c.field-meta.xml
<CustomField>
    <fullName>NumberShippings__c</fullName>
    <label>NumberShippings</label>
    <summaryForeignKey>OrderShipping__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>