force-app/main/default/objects/Order__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>ATG=order id
KBRW=transaction id</description>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>