force-app/main/default/objects/Order__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>