force-app/main/default/objects/Order__c/fields/OwnerID_ParentRoleID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID_ParentRoleID__c</fullName>
    <description>Tech purpose to have a custom My Teams since the standard Owner is not representative of the Order&apos;s Owner.</description>
    <label>OwnerID ParentRoleID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>