force-app/main/default/objects/Order__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>KBRW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>