force-app/main/default/objects/Order__c/fields/StatusIconics__c.field-meta.xml
<CustomField>
    <fullName>StatusIconics__c</fullName>
    <description>This field is uptaded according the order shipping status</description>
    <label>Status Iconics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending Action</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>