force-app/main/default/objects/Order__c/fields/Tech_isOwner_CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>Tech_isOwner_CurrentUser__c</fullName>
    <formula>OwnerId__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech isOwner CurrentUser</label>
    <type>Checkbox</type>
</CustomField>