force-app/main/default/objects/Order__c/fields/WWClientID__c.field-meta.xml
<CustomField>
    <fullName>WWClientID__c</fullName>
    <externalId>true</externalId>
    <label>WWClientID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>