force-app/main/default/objects/Order__c/validationRules/is_null.validationRule-meta.xml
<ValidationRule>
    <fullName>is_null</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account Cannot be Null</errorMessage>
</ValidationRule>